# CodeAloud

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  judge0.conf  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: question.py  session.py
backend/app/routers/: code.py  interview.py  questions.py
backend/app/services/: code_harness.py  judge0_service.py  llm_client.py  prompt_builder.py  session_manager.py
backend/data/: questions.json
backend/tests/: conftest.py  test_code_router.py  test_interview_router.py  test_judge0_service.py  test_models.py  test_prompt_builder.py  test_question_solutions.py  test_questions_router.py  test_session_manager.py
code_aloud/backend/data/: questions.json
code_aloud/backend/models/: question.py
code_aloud/backend/routers/: code.py  questions.py
code_aloud/backend/services/: judge0_service.py  llm_client.py  session_manager.py
code_aloud/fine_tune/data/: build_dataset.py  gen_snapshots.py  hints.json  states.jsonl
code_aloud/fine_tune/eval/: eval_judge.py  gen_test_pred.py
code_aloud/fine_tune/eval/eval_res/qwen2.5-coder-7b-instruct/: judged.jsonl  pred.jsonl  report.json
code_aloud/fine_tune/eval/eval_res/qwen2.5-coder-7b-sft:2026-07-14-190420-565f7/: judged.jsonl  pred.jsonl  report.json
code_aloud/fine_tune/eval/eval_res/qwen2.5-codr-7b-instruct-sft/: judged.jsonl  pred.jsonl  report.json
finetune/data/: build_dataset.py  gen_snapshots.py  snapshots.json
finetune/eval/: eval_judge.py  judged.jsonl  report.json
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  CodeEditor.tsx  EvalReport.tsx  InterviewSession.tsx
frontend/src/hooks/: useInterview.ts  useStream.ts
tests/: conftest.py  test_code_router.py  test_interview_router.py  test_judge0_service.py  test_models.py  test_prompt_builder.py  test_question_solutions.py  test_questions_router.py  test_session_manager.py
