[project]
name = "code_aloud"
version = "0.1.0"
description = "codeAloud — AI coding-interview simulator (backend API + finetune pipeline)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
backend = [
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "redis>=8.0.0",
]
finetune = []
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
lint = [
    "ruff>=0.9",
]

[tool.uv]
default-groups = ["backend", "finetune", "test", "lint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_aloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, no I/O",
    "integration: requires running services",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning",
]
