[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn[standard]>=0.49.0",
]
